2004-10-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* TODO:
	* bin/flumotion-worker.in:
	* bin/flumotion.in:
	* conf/Makefile.am:
	* conf/complex.xml:
	* conf/ogg-test-theora.xml:
	* conf/ogg-test-vorbis-theora.xml:
	* conf/videotest-jpeg.xml:
	* flumotion/component/component.py:
	* flumotion/component/http/http.py:
	* flumotion/manager/component.py:
	* flumotion/manager/manager.py:
	* flumotion/manager/worker.py:
	* flumotion/test/Makefile.am:
	* flumotion/test/common.py:
	* flumotion/test/test_component.py:
	* flumotion/test/test_manager.py:
	* flumotion/utils/log.py:
	* flumotion/worker/Makefile.am:
	* flumotion/worker/job.py:
	* flumotion/worker/report.py:
	* flumotion/worker/worker.py:
	  merge diffs between revision 681 on branch and trunk to trunk

2004-10-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	branch: johan-workers

	* flumotion/manager/component.py:
	  and this should fix that problem by delaying adding of the component
	  avatar to the feeder

2004-10-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	branch: johan-workers

	* flumotion/manager/component.py:
	  I guess this explains why I get random tracebacks in the manager.
	  This means I can go home and fix it on monday.

2004-10-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	branch: johan-workers

	* TODO:
	* flumotion/test/Makefile.am:
	  make test dir stop "make" on errors
	* flumotion/manager/component.py:
	* flumotion/test/test_manager.py:
	  some more cleanups

2004-10-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	branch: johan-workers

	* Makefile.am:
	* TODO:
	* conf/complex.xml:
	* flumotion/component/component.py:
	* flumotion/component/http/http.py:
	* flumotion/manager/component.py:
	* flumotion/manager/worker.py:
	* flumotion/test/common.py:
	* flumotion/test/test_component.py:
	* flumotion/test/test_manager.py:
	* flumotion/worker/job.py:
	* flumotion/worker/worker.py: